@@ -1,12 +1,0 @@
-<%%= semantic_form_for @<%= file_name %> do |form| %>
-<%- if attributes.empty? -%>
-  <%% form.inputs %>
-<%- else -%>
-  <%% form.inputs do %>
-  <%- for attribute in attributes -%>
-    <%%= form.input :<%= attribute.name %>, :label => '<%= attribute.name.titleize %>' %>
-  <%- end -%>
-  <%% end %>
-<%- end -%>
-  <%%= form.buttons %>
-<%% end %>
